microk8s/workloads/nginx.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: sandbox
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      # hostNetwork: true
      containers:
      - name: nginx
        image: nginx:1.17.4
        ports:
        - name: web
          # hostPort: 80
          containerPort: 80
        # resources:
        #   requests:
        #     cpu: "50Mi"
        #     memory: "1M"
        #   limits:
        #     cpu: "1000Mi"
        #     memory: "1G"

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: sandbox
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
  externalIPs:
    - 192.168.0.4

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: web
