microk8s/workloads/pihole.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
        name: pihole
    spec:
      # hostNetwork: true
      containers:
      - name: pihole
        image: pihole/pihole:latest
        volumeMounts:
        - name: pihole-local-etc-volume
          mountPath: "/etc/pihole"
        - name: pihole-local-dnsmasq-volume
          mountPath: "/etc/dnsmasq.d"
      volumes:
      - name: pihole-local-etc-volume
        persistentVolumeClaim:
          claimName: pihole-local-etc-claim
      - name: pihole-local-dnsmasq-volume
        persistentVolumeClaim:
          claimName: pihole-local-dnsmasq-claim

---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
spec:
  type: NodePort
  selector:
    app: pihole
  ports:
  - port: 8000
    targetPort: 80
    name: web
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns-udp
  # Attempt to preserve source IP - https://kubernetes.io/docs/tasks/access-application-cluster/create-external-load-balancer/#preserving-the-client-source-ip
  # Does not seem to work, possibly because accessing via service port, not nodeport
  externalTrafficPolicy: Local
  externalIPs:
  - 192.168.0.4
  
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pihole
  namespace: pihole
  # annotations:
    # traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /pihole
        backend:
          serviceName: pihole
          servicePort: web
